Translations to login

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,3 +1,6 @@
 {
-    "LOGIN": "Login"
+    "LOGIN": "Login",
+    "MOBILE_NUMBER": "Mobile number",
+    "PASSWORD": "Password",
+    "LOST_PASSWORD": " Lost password?"
 }
