Fix wrong key in finnish translations

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,6 +1,6 @@
 {
     "LOGIN" :  "Kirjaudu sisään",
-    "PHONE_NUMBER": "Puhelinnumero",
+    "MOBILE_NUMBER": "Puhelinnumero",
     "PASSWORD": "Salasana",
     "LOST_PASSWORD": "Salasana hukassa?"
 }
