Add translations to tabs and contacts

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -2,5 +2,8 @@
     "LOGIN": "Login",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
-    "LOST_PASSWORD": " Lost password?"
+    "LOST_PASSWORD": " Lost password?",
+    "LOG_OUT": "Log out",
+    "CONTACTS": "Contacts",
+    "SEARCH": "Search"
 }
