--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -5,5 +5,6 @@
     "LOST_PASSWORD": " Lost password?",
     "LOG_OUT": "Log out",
     "CONTACTS": "Contacts",
-    "SEARCH": "Search"
+    "SEARCH": "Search",
+    "DIAL_WAIT": "Dialing, please hold..."
 }
