--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -5,5 +5,6 @@
     "LOST_PASSWORD": "Salasana hukassa?",
     "LOG_OUT": "Kirjaudu ulos",
     "CONTACTS": "Kontaktit",
-    "SEARCH": "Hae"
+    "SEARCH": "Hae",
+    "DIAL_WAIT": "Soitetaan, odota hetki..."
 }
