Add dynamic translations to contacts action sheet

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -6,5 +6,9 @@
     "LOG_OUT": "Log out",
     "CONTACTS": "Contacts",
     "SEARCH": "Search",
-    "DIAL_WAIT": "Dialing, please hold..."
+    "DIAL_WAIT": "Dialing, please hold...",
+    "SAR_CALL": "Call with SAR",
+    "PROFILE": "Profile",
+    "ACTIONS": "Actions",
+    "CANCEL": "Cancel"
 }
