More app language changing

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -7,7 +7,7 @@
     "CONTACTS": "Contacts",
     "SEARCH": "Search",
     "DIAL_WAIT": "Dialing, please hold...",
-    "SAR_CALL": "Call with SAR",
+    "SAR_CALL": "Call with Soar",
     "PROFILE": "Profile",
     "ACTIONS": "Actions",
     "CANCEL": "Cancel",
