--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -7,7 +7,7 @@
     "CONTACTS": "Kontaktit",
     "SEARCH": "Hae",
     "DIAL_WAIT": "Soitetaan, odota hetki...",
-    "SAR_CALL": "Soita SAR:lla",
+    "SAR_CALL": "Soita Soarilla",
     "PROFILE": "Profiili",
     "ACTIONS": "Toiminnot",
     "CANCEL": "Peruuta",
