--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -14,7 +14,7 @@
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "USER_ALREADY_IN_CALL": "Käyttäjällä on puhelu kesken!",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
-    "NOTIFICATION_CALL" : "Soar-puhelu {{displayName}}:lta ( {.peer}} )",
+    "NOTIFICATION_CALL" : "Soar-puhelu {{displayName}}:lta ( {mediaConnection}} )",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "ERROR_USER_OFFLINE": "Näyttää siltä että käyttäjä on offline!",
     "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
