--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -14,7 +14,7 @@
     "CALL_HEADER": "Call with {{displayName}}",
     "USER_ALREADY_IN_CALL": "User is already in call!",
     "CALL_INCOMING_TITLE":" Call from {{displayName}}}",
-    "NOTIFICATION_CALL" : "Soar call from {{displayName}}} ( {mediaConnection}} )",
+    "NOTIFICATION_CALL" : "Soar call from {{displayName}}} ( {{mediaConnection}} )",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
     "ERROR_USER_OFFLINE": "Looks like that user is offline!",
     "ERROR_SERVER" : "Could not connect to server!",
