--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -20,6 +20,6 @@
     "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
     "ERROR_NETWORK" : "Yhteysvirhe palvelimen kanssa",
     "ERROR_TITLE" : "Jotain meni pieleen!",
-    "CONTACT_CURRENT_STATE": "Tällä hetkellä "
+    "CONTACT_CURRENT_STATE": "Juuri nyt "
 }
 
