Add sign up locales

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,5 +1,6 @@
 {
     "LOGIN": "Login",
+    "REGISTER" :  "Sign up",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
     "LOST_PASSWORD": " Lost password?",
