Some more work on signing up

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,5 +1,7 @@
 {
     "LOGIN" :  "Kirjaudu sisään",
+    "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
+    "VERIFY_NUMBER_HEADER" :  "Numerosi varmentaminen",
     "REGISTER" :  "Rekisteröidy",
     "MOBILE_NUMBER": "Puhelinnumero",
     "PASSWORD": "Salasana",
