--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,5 +1,7 @@
 {
     "LOGIN": "Login",
+    "VERIFY_NUMBER" :  "Send verification code",
+    "VERIFY_NUMBER_HEADER" :  "Verifying your phone number",
     "REGISTER" :  "Sign up",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
