--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,7 +1,8 @@
 {
     "LOGIN": "Login",
     "VERIFY_NUMBER" :  "Send verification code",
-    "VERIFY_NUMBER_HEADER" :  "Verifying your phone number",
+    "VERIFY_NUMBER_HEADER" :  "1. Verifying your phone number",
+    "VERIFY_NUMBER_TEXT" :  "In order to sign up, we will send you an SMS message with a one-time code to verify your number. Enter your phone number below and use this code to register your account",
     "REGISTER" :  "Sign up",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
