More work on registering functionality

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,11 +1,16 @@
 {
     "LOGIN": "Login",
     "VERIFY_NUMBER" :  "Send verification code",
-    "VERIFY_NUMBER_HEADER" :  "1. Verifying your phone number",
-    "VERIFY_NUMBER_TEXT" :  "In order to sign up, we will send you an SMS message with a one-time code to verify your number. Enter your phone number below and use this code to register your account",
+    "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Verifying your phone number",
+    "VERIFY_NUMBER_TEXT" :  "In order to sign up, we will send you an SMS message with a one-time code to verify your phone number. Enter your number below and use this code to register your account",
+    "VERIFY_EXIST" :  "Already got a code? Tap here.",
+    "VERIFY_CODE": "Veification code",
     "REGISTER" :  "Sign up",
+    "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
+    "REGISTER_NUMBER_TEXT" :  "Input your code and the password you want to use, twice",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
+    "PASSWORD_AGAIN": "Password again",
     "LOST_PASSWORD": " Lost password?",
     "LOG_OUT": "Log out",
     "CONTACTS": "Contacts",
