--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,11 +1,16 @@
 {
     "LOGIN" :  "Kirjaudu sisään",
     "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
-    "VERIFY_NUMBER_HEADER" :  "1. Numerosi varmentaminen",
+    "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Numerosi varmentaminen",
     "VERIFY_NUMBER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas ja käytä tätä koodia rekisteröidessäsi tilin",
+    "VERIFY_EXIST" :  "Onko sinulla jo koodi? Klikkaa tästä.",
+    "VERIFY_CODE": "Varmistusluku",
     "REGISTER" :  "Rekisteröidy",
+    "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
+    "REGISTER_NUMBER_TEXT" :  "Kirjoita koodisi, sekä salasana jota haluat käyttää kahteen kertaan.",
     "MOBILE_NUMBER": "Puhelinnumero",
     "PASSWORD": "Salasana",
+    "PASSWORD_AGAIN": "Salasana uudelleen",
     "LOST_PASSWORD": "Salasana hukassa?",
     "LOG_OUT": "Kirjaudu ulos",
     "CONTACTS": "Kontaktit",
