More friendly and informative translations

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -4,10 +4,10 @@
     "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Verifying your phone number",
     "VERIFY_NUMBER_TEXT" :  "In order to sign up, we will send you an SMS message with a one-time code to verify your phone number. Enter your number below and use this code to register your account",
     "VERIFY_EXIST" :  "Already got a code? Tap here.",
-    "VERIFY_CODE": "Veification code",
+    "VERIFY_CODE": "Verification code",
     "REGISTER" :  "Sign up",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
-    "REGISTER_NUMBER_TEXT" :  "Input your code and the password you want to use, twice",
+    "REGISTER_NUMBER_TEXT" :  "OK, you should receive your code in a moment. You have an hour t ouse it, input your code and the password you want to use, twice",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
     "PASSWORD_AGAIN": "Password again",
