--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -18,14 +18,14 @@
     "CONTACTS": "Kontaktit",
     "SEARCH": "Hae",
     "DIAL_WAIT": "Soitetaan, odota hetki...",
-    "SAR_CALL": "Soita Soarilla",
+    "SAR_CALL": "Soita SoAR:lla",
     "PROFILE": "Profiili",
     "ACTIONS": "Toiminnot",
     "CANCEL": "Peruuta",
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "USER_ALREADY_IN_CALL": "Käyttäjällä on puhelu kesken!",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
-    "NOTIFICATION_CALL" : "Soar-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
+    "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "ERROR_USER_OFFLINE": "Näyttää siltä että käyttäjä on offline!",
     "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
