Some more error translations

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -5,6 +5,10 @@
     "TIMEOUT_ERROR" :  "Yhteyttä palvelimeen ei saatu",
     "WRONG_PASSWORD": "Väärä salasana!",
     "USER_NOT_FOUND": "Käyttäjää ei löytynyt!",
+    "NO_VERIFICATION": "Kyseistä koodia ei löytynyt",
+    "VERIFICATION_EXPIRED": "Käyttämäsi koodi on vanhentunut. Ole hyvä ja pyydä uusi",
+    "VERIFICATION_USED": "Koodi on jo käytetty kerran!",
+    "USER_EXISTS": "Tuolla numerolla oleva käyttäjä on jo olemassa!",
     "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
     "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Numerosi varmentaminen",
     "VERIFY_NUMBER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
