--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -5,6 +5,10 @@
     "TIMEOUT_ERROR" :  "Connection timed out",
     "WRONG_PASSWORD": "Wrong password!",
     "USER_NOT_FOUND": "User not found!",
+    "NO_VERIFICATION": "Verification code not found",
+    "VERIFICATION_EXPIRED": "The code you used has expired. Please aqcuire a new one",
+    "VERIFICATION_USED": "The code you used has alraedy been used once",
+    "USER_EXISTS": "The number you are attempting to register is already registered",
     "VERIFY_NUMBER" :  "Send verification code",
     "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Verifying your phone number",
     "VERIFY_NUMBER_TEXT" :  "In order to sign up, we will send you an SMS with a one-time code to verify your phone number. Enter your number below (in international format) and use this code to register your account",
