--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -14,6 +14,7 @@
     "VERIFY_NUMBER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
     "VERIFY_EXIST" :  "Onko sinulla jo koodi? Klikkaa tästä.",
     "VERIFY_CODE": "Varmistusluku",
+    "MALFORMED_NUMBER": "Tarkista numerosi, kiitos!",
     "REGISTER" :  "Rekisteröidy",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
     "REGISTER_NUMBER_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös salasana jota haluat käyttää kahteen kertaan.",
