Add quit to side menu

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,5 +1,6 @@
 {
     "LOGIN": "Login",
+    "QUIT": "Exit the app",
     "ERROR" :  "Error!",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
     "TIMEOUT_ERROR" :  "Connection timed out",
