Some password resetting functinality

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -12,7 +12,8 @@
     "USER_EXISTS": "Tuolla numerolla oleva käyttäjä on jo olemassa!",
     "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
     "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Numerosi varmentaminen",
-    "VERIFY_NUMBER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
+    "VERIFY_NUMBER_REGISTER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
+    "VERIFY_NUMBER_PASSWORD_TEXT" :  " Uusiaksesi salasaasi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita käyttämäsi numerosi alas ja käytä saamaasi koodia salasanan uusimisessa",
     "VERIFY_EXIST" :  "Onko sinulla jo koodi? Klikkaa tästä.",
     "VERIFY_CODE": "Varmistusluku",
     "MALFORMED_NUMBER": "Tarkista numerosi, kiitos!",
