Almost done with password reset functionality

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -18,8 +18,11 @@
     "VERIFY_CODE": "Verification code",
     "MALFORMED_NUMBER": "Your number seems to not be valid!",
     "REGISTER" :  "Sign up",
+    "RESET_PASSWORD" :  "Reset your password",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
-    "REGISTER_NUMBER_TEXT" :  "OK, you should receive your code in a moment. You have an hour t ouse it, input your code and the password you want to use, twice",
+    "RESET_PASSWORD_HEADER" :  "2 / 2 | Resetting your password",
+    "REGISTER_NUMBER_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the password you want to use, twice",
+    "RESET_PASSWORD_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the new password you want to use, twice",
     "MOBILE_NUMBER": "Mobile number",
     "PASSWORD": "Password",
     "PASSWORD_AGAIN": "Password again",
