--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -18,8 +18,11 @@
     "VERIFY_CODE": "Varmistusluku",
     "MALFORMED_NUMBER": "Tarkista numerosi, kiitos!",
     "REGISTER" :  "Rekisteröidy",
+    "RESET_PASSWORD" :  "Uusi salasanasi",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
+    "RESET_PASSWORD_HEADER" :  "2 / 2 | Salasanasi uusiminen",
     "REGISTER_NUMBER_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös salasana jota haluat käyttää kahteen kertaan.",
+    "RESET_PASSWORD_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös uusi salasana jota haluat käyttää kahteen kertaan.",
     "MOBILE_NUMBER": "Puhelinnumero",
     "PASSWORD": "Salasana",
     "PASSWORD_AGAIN": "Salasana uudelleen",
