Add settings state and template and such

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,6 +1,7 @@
 {
     "LOGIN": "Login",
     "QUIT": "Exit the app",
+    "SETTINGS": "Settings",
     "ERROR" :  "Error!",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
     "TIMEOUT_ERROR" :  "Connection timed out",
