Add some translations and such to the settings screen

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,6 +1,8 @@
 {
     "LOGIN": "Login",
     "QUIT": "Exit the app",
+    "MISCALLENEOUS": "Miscellaneous settings",
+    "REFRESH_CONTACTS": "Refresh your contacts",
     "SETTINGS": "Settings",
     "ERROR" :  "Error!",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
