Order translations in an alphabetic order

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,54 +1,54 @@
 {
-    "LOGIN": "Login",
-    "QUIT": "Exit the app",
-    "MISCALLENEOUS": "Miscellaneous settings",
-    "REFRESH_CONTACTS": "Refresh your contacts",
-    "SETTINGS": "Settings",
-    "ERROR" :  "Error!",
-    "UNSPECIFIED_ERROR" :  "Unspecified error",
-    "TIMEOUT_ERROR" :  "Connection timed out",
+    "ACTIONS": "Actions",
+    "CALL_HEADER": "Call with {{displayName}}",
+    "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
+    "CALL_INCOMING_TITLE":" Call from {{displayName}}",
     "CAMERA_NOT_FOUND" :  "No input device found!",
-    "WRONG_PASSWORD": "Wrong password!",
-    "USER_NOT_FOUND": "User not found!",
-    "NO_VERIFICATION": "Verification code not found",
-    "VERIFICATION_EXPIRED": "The code you used has expired. Please aqcuire a new one",
-    "VERIFICATION_USED": "The code you used has alraedy been used once",
-    "USER_EXISTS": "The number you are attempting to register is already registered",
-    "VERIFY_NUMBER" :  "Send verification code",
-    "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Verifying your phone number",
-    "VERIFY_NUMBER_REGISTER_TEXT" :  "In order to sign up, we will send you an SMS with a one-time code to verify your phone number. Enter your number below (in international format) and use this code to register your account",
-    "VERIFY_NUMBER_PASSWORD_TEXT" :  "In order to reset your password, we will send you an SMS with a one-time code to verify your phone number. Enter the number you used to register and use this code to reset your password",
-    "VERIFY_EXIST" :  "Already got a code? Tap here.",
-    "VERIFY_CODE": "Verification code",
+    "CANCEL": "Cancel",
+    "CONTACTS": "Contacts",
+    "CONTACT_CURRENT_STATE": "Currently ",
+    "DIAL_WAIT": "Dialing, please hold...",
+    "ERROR" :  "Error!",
+    "ERROR_NETWORK" : "Network error with server!",
+    "ERROR_SERVER" : "Could not connect to server!",
+    "ERROR_TITLE" : "Something went wrong!",
+    "ERROR_USER_OFFLINE": "Looks like that user is offline!",
+    "LOGIN": "Login",
+    "LOG_OUT": "Log out",
+    "LOST_PASSWORD": " Lost password?",
     "MALFORMED_NUMBER": "Your number seems to not be valid!",
-    "REGISTER" :  "Sign up",
-    "RESET_PASSWORD" :  "Reset your password",
-    "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
-    "RESET_PASSWORD_HEADER" :  "2 / 2 | Resetting your password",
-    "REGISTER_NUMBER_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the password you want to use, twice",
-    "RESET_PASSWORD_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the new password you want to use, twice",
+    "MISCALLENEOUS": "Miscellaneous settings",
     "MOBILE_NUMBER": "Mobile number",
+    "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
+    "NO_VERIFICATION": "Verification code not found",
     "PASSWORD": "Password",
     "PASSWORD_AGAIN": "Password again",
     "PASSWORD_ERROR": "Password error",
     "PASSWORD_NO_MATCH": "Passwords do not match!",
-    "LOST_PASSWORD": " Lost password?",
-    "LOG_OUT": "Log out",
-    "CONTACTS": "Contacts",
-    "SEARCH": "Search",
-    "DIAL_WAIT": "Dialing, please hold...",
-    "SAR_CALL": "Call with SoAR",
     "PROFILE": "Profile",
-    "ACTIONS": "Actions",
-    "CANCEL": "Cancel",
-    "CALL_HEADER": "Call with {{displayName}}",
+    "QUIT": "Exit the app",
+    "REFRESH_CONTACTS": "Refresh your contacts",
+    "REGISTER" :  "Sign up",
+    "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
+    "REGISTER_NUMBER_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the password you want to use, twice",
+    "RESET_PASSWORD" :  "Reset your password",
+    "RESET_PASSWORD_HEADER" :  "2 / 2 | Resetting your password",
+    "RESET_PASSWORD_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the new password you want to use, twice",
+    "SAR_CALL": "Call with SoAR",
+    "SEARCH": "Search",
+    "SETTINGS": "Settings",
+    "TIMEOUT_ERROR" :  "Connection timed out",
+    "UNSPECIFIED_ERROR" :  "Unspecified error",
     "USER_ALREADY_IN_CALL": "User is already in call!",
-    "CALL_INCOMING_TITLE":" Call from {{displayName}}",
-    "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
-    "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
-    "ERROR_USER_OFFLINE": "Looks like that user is offline!",
-    "ERROR_SERVER" : "Could not connect to server!",
-    "ERROR_NETWORK" : "Network error with server!",
-    "ERROR_TITLE" : "Something went wrong!",
-    "CONTACT_CURRENT_STATE": "Currently "
+    "USER_EXISTS": "The number you are attempting to register is already registered",
+    "USER_NOT_FOUND": "User not found!",
+    "VERIFICATION_EXPIRED": "The code you used has expired. Please aqcuire a new one",
+    "VERIFICATION_USED": "The code you used has alraedy been used once",
+    "VERIFY_CODE": "Verification code",
+    "VERIFY_EXIST" :  "Already got a code? Tap here.",
+    "VERIFY_NUMBER" :  "Send verification code",
+    "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Verifying your phone number",
+    "VERIFY_NUMBER_PASSWORD_TEXT" :  "In order to reset your password, we will send you an SMS with a one-time code to verify your phone number. Enter the number you used to register and use this code to reset your password",
+    "VERIFY_NUMBER_REGISTER_TEXT" :  "In order to sign up, we will send you an SMS with a one-time code to verify your phone number. Enter your number below (in international format) and use this code to register your account",
+    "WRONG_PASSWORD": "Wrong password!"
 }
