--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,55 +1,55 @@
 {
-    "LOGIN" :  "Kirjaudu sisään",
-    "QUIT": "Lopeta sovellus",
-    "MISCALLENEOUS": "Muut asetukset",
-    "REFRESH_CONTACTS": "Päivitä puhelimen kontaktit",
-    "SETTINGS": "Asetukset",
-    "ERROR" :  "Virhe!",
-    "UNSPECIFIED_ERROR" :  "Tuntematon virhe",
+    "ACTIONS": "Toiminnot",
+    "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
+    "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
+    "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
     "CAMERA_NOT_FOUND" :  "Kameraa ei löytynyt!",
-    "TIMEOUT_ERROR" :  "Yhteyttä palvelimeen ei saatu",
-    "WRONG_PASSWORD": "Väärä salasana!",
-    "USER_NOT_FOUND": "Käyttäjää ei löytynyt!",
-    "NO_VERIFICATION": "Kyseistä koodia ei löytynyt",
-    "VERIFICATION_EXPIRED": "Käyttämäsi koodi on vanhentunut. Ole hyvä ja pyydä uusi",
-    "VERIFICATION_USED": "Koodi on jo käytetty kerran!",
-    "USER_EXISTS": "Tuolla numerolla oleva käyttäjä on jo olemassa!",
-    "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
-    "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Numerosi varmentaminen",
-    "VERIFY_NUMBER_REGISTER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
-    "VERIFY_NUMBER_PASSWORD_TEXT" :  " Uusiaksesi salasaasi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita käyttämäsi numerosi alas ja käytä saamaasi koodia salasanan uusimisessa",
-    "VERIFY_EXIST" :  "Onko sinulla jo koodi? Klikkaa tästä.",
-    "VERIFY_CODE": "Varmistusluku",
+    "CANCEL": "Peruuta",
+    "CONTACTS": "Kontaktit",
+    "CONTACT_CURRENT_STATE": "Juuri nyt ",
+    "DIAL_WAIT": "Soitetaan, odota hetki...",
+    "ERROR" :  "Virhe!",
+    "ERROR_NETWORK" : "Yhteysvirhe palvelimen kanssa",
+    "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
+    "ERROR_TITLE" : "Jotain meni pieleen!",
+    "ERROR_USER_OFFLINE": "Näyttää siltä että käyttäjä on offline!",
+    "LOGIN" :  "Kirjaudu sisään",
+    "LOG_OUT": "Kirjaudu ulos",
+    "LOST_PASSWORD": "Salasana hukassa?",
     "MALFORMED_NUMBER": "Tarkista numerosi, kiitos!",
-    "REGISTER" :  "Rekisteröidy",
-    "RESET_PASSWORD" :  "Uusi salasanasi",
-    "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
-    "RESET_PASSWORD_HEADER" :  "2 / 2 | Salasanasi uusiminen",
-    "REGISTER_NUMBER_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös salasana jota haluat käyttää kahteen kertaan.",
-    "RESET_PASSWORD_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös uusi salasana jota haluat käyttää kahteen kertaan.",
+    "MISCALLENEOUS": "Muut asetukset",
     "MOBILE_NUMBER": "Puhelinnumero",
+    "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
+    "NO_VERIFICATION": "Kyseistä koodia ei löytynyt",
     "PASSWORD": "Salasana",
     "PASSWORD_AGAIN": "Salasana uudelleen",
     "PASSWORD_ERROR": "Salsanavirhe",
     "PASSWORD_NO_MATCH": "Salasanat eivät täsmää!",
-    "LOST_PASSWORD": "Salasana hukassa?",
-    "LOG_OUT": "Kirjaudu ulos",
-    "CONTACTS": "Kontaktit",
-    "SEARCH": "Hae",
-    "DIAL_WAIT": "Soitetaan, odota hetki...",
-    "SAR_CALL": "Soita SoAR:lla",
     "PROFILE": "Profiili",
-    "ACTIONS": "Toiminnot",
-    "CANCEL": "Peruuta",
-    "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
+    "QUIT": "Lopeta sovellus",
+    "REFRESH_CONTACTS": "Päivitä puhelimen kontaktit",
+    "REGISTER" :  "Rekisteröidy",
+    "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
+    "REGISTER_NUMBER_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös salasana jota haluat käyttää kahteen kertaan.",
+    "RESET_PASSWORD" :  "Uusi salasanasi",
+    "RESET_PASSWORD_HEADER" :  "2 / 2 | Salasanasi uusiminen",
+    "RESET_PASSWORD_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös uusi salasana jota haluat käyttää kahteen kertaan.",
+    "SAR_CALL": "Soita SoAR:lla",
+    "SEARCH": "Hae",
+    "SETTINGS": "Asetukset",
+    "TIMEOUT_ERROR" :  "Yhteyttä palvelimeen ei saatu",
+    "UNSPECIFIED_ERROR" :  "Tuntematon virhe",
     "USER_ALREADY_IN_CALL": "Käyttäjällä on puhelu kesken!",
-    "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
-    "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
-    "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
-    "ERROR_USER_OFFLINE": "Näyttää siltä että käyttäjä on offline!",
-    "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
-    "ERROR_NETWORK" : "Yhteysvirhe palvelimen kanssa",
-    "ERROR_TITLE" : "Jotain meni pieleen!",
-    "CONTACT_CURRENT_STATE": "Juuri nyt "
+    "USER_EXISTS": "Tuolla numerolla oleva käyttäjä on jo olemassa!",
+    "USER_NOT_FOUND": "Käyttäjää ei löytynyt!",
+    "VERIFICATION_EXPIRED": "Käyttämäsi koodi on vanhentunut. Ole hyvä ja pyydä uusi",
+    "VERIFICATION_USED": "Koodi on jo käytetty kerran!",
+    "VERIFY_CODE": "Varmistusluku",
+    "VERIFY_EXIST" :  "Onko sinulla jo koodi? Klikkaa tästä.",
+    "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
+    "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Numerosi varmentaminen",
+    "VERIFY_NUMBER_PASSWORD_TEXT" :  " Uusiaksesi salasaasi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita käyttämäsi numerosi alas ja käytä saamaasi koodia salasanan uusimisessa",
+    "VERIFY_NUMBER_REGISTER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
+    "WRONG_PASSWORD": "Väärä salasana!"
 }
 
