--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -47,10 +47,10 @@
     "VERIFICATION_USED": "Koodi on jo käytetty kerran!",
     "VERIFY_CODE": "Varmistusluku",
     "VERIFY_EXIST" :  "Onko sinulla jo koodi? Klikkaa tästä.",
-    "VERIFY_NUMBER" :  "Lähetä varmistuskoodi",
+    "VERIFY_NUMBER" :  "Lähetä",
     "VERIFY_NUMBER_HEADER" :  "1 / 2 |  Numerosi varmentaminen",
-    "VERIFY_NUMBER_PASSWORD_TEXT" :  " Uusiaksesi salasaasi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita käyttämäsi numerosi alas ja käytä saamaasi koodia salasanan uusimisessa",
-    "VERIFY_NUMBER_REGISTER_TEXT" :  "Rekisteröityäksesi lähetämme sinulle kertakäyttöisen koodin tekstiviestinä varmentaaksemme numerosi. Kirjoita numerosi alas (kansainvälisesssä formaatissa) ja käytä tätä koodia rekisteröidessäsi tilin",
+    "VERIFY_NUMBER_PASSWORD_TEXT" :  "Kirjoita alas rekisteröimäsi numero. Lähetämme sinulle koodin, jolla voit vaihtaa salasanan.",
+    "VERIFY_NUMBER_REGISTER_TEXT" :  "Palveluun rekisteröidytään puhelinnumerolla. Syötä numero kenttään kansainvälisessä muodossa. Saat tekstiviestillä koodin, joka vaaditaan rekisteröitymiseen. ",
     "WRONG_PASSWORD": "Väärä salasana!"
 }
 
