--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -30,7 +30,7 @@
     "PASSWORD_NO_MATCH": "Salasanat eivät täsmää!",
     "PROFILE": "Profiili",
     "QUIT": "Lopeta sovellus",
-    "REFRESH_CONTACTS": "Päivitä puhelimen kontaktit",
+    "REFRESH_CONTACTS": "Päivitä kontaktilistasi",
     "REGISTER" :  "Rekisteröidy",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
     "REGISTER_NUMBER_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös salasana jota haluat käyttää kahteen kertaan.",
