--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,6 +1,6 @@
 {
     "ACTIONS": "Actions",
-    "NO_CONTACTS_SEARCH": "No contacts found for that search result",
+    "NO_CONTACTS_SEARCH": "No matching contacts",
     "NO_CONTACTS_FOUND": "Looks like your phone doesn't have any contacts that have SoAR installed",
     "CALL_HEADER": "Call with {{displayName}}",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
