--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,6 +1,6 @@
 {
     "ACTIONS": "Toiminnot",
-    "NO_CONTACTS_SEARCH": "Hakuehtoja vastaavia kontakteja ei löytynyt",
+    "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
